bReeze 0.4-1 [2017-08-01]
-------------------------

* some small bug fixes


bReeze 0.4-0 [2014-09-18]
-------------------------

* S3 reorganisation of all functions
 
* aep, availability, energy, frequency, month.stats, day.plot, 
  polar.plot, turb.iec.plot, profile, turbulence, weibull: 
  potential timezone bug fixed
  
* plot.weibull: parameter display error fixed

* package dependencies reduced 


bReeze 0.3-2 [2014-05-08]
-------------------------

* availability, frequency, monthStats, plotDay, plotPolar, 
  plotTimeSeries, plotTurbIEC, profile, turbulence, weibull:
  time stamp issue fixed

* aep, energy, frequency, turbulence: NA in output replaced by 0 
  (NA is not really correct and may cause plotting problems)

* formatTS: time zone support added
  
* messages/warnings cleaned up
  

bReeze 0.3-1 [2014-03-31]
-------------------------

* availability, frequency, monthStats, plotDay, plotPolar, 
  plotTurbIEC, profile, turbulence, weibull: specify data subsets
  by date

* plotDay: sectoral plotting for single data sets added

* profile: alpha as single value or vector (one per sector)

* several improvements/fixes of code and documentation


bReeze 0.3-0 [2014-01-13]
-------------------------

* plotMap: function for simple map plotting is back, 
  now based on RgoogleMaps package

* uncertainty: new function for uncertainty assessment 

* plotUncertainty: new function for uncertainty plots

* short name wrapper functions: bug fixed - default value 
  confusion


bReeze 0.2-4 [2013-12-04]
-------------------------

* formatTS: removed some test code left in last version

* readPC: simpler specifying of package directory files

* some background improvements/fixes


bReeze 0.2-3 [2013-09-17]
-------------------------

* monthStats: all available signals of the met mast can now be 
  used for calculations;
  in addition to "mean", also "median", "min", "max" and "sd" 
  can be applied

* plotAvailability: faster plotting
