@@ -1,2 +1,2 @@
-YEAR: 2017
+YEAR: 2018
 COPYRIGHT HOLDER: Christian Graul
