@@ -22,7 +22,7 @@ export(
   turb.iec.plot,
   iec,
   pc,
-  profile,
+  windprofile,
   pro,
   set,
   timestamp,
@@ -50,7 +50,7 @@ S3method(plot, frequency)
 S3method(plot, mast)
 S3method(plot, month.stats)
 S3method(plot, pc)
-S3method(plot, profile)
+S3method(plot, windprofile)
 S3method(plot, turbulence)
 S3method(plot, uncertainty)
 S3method(plot, weibull)
@@ -61,7 +61,7 @@ S3method(print, frequency)
 S3method(print, mast)
 S3method(print, month.stats)
 S3method(print, pc)
-S3method(print, profile)
+S3method(print, windprofile)
 S3method(print, set)
 S3method(print, turbulence)
 S3method(print, uncertainty)
