@@ -1,3 +1,9 @@
+bReeze 0.4-2 [2018-01-05]
+-------------------------
+
+* fix name conflict with R base method
+
+
 bReeze 0.4-1 [2017-08-01]
 -------------------------
 
